React에 Redux이용해 ToDoList 만들어보기

--- a/Desktop/programing/vanilla-redux/public/index.html
+++ b/Desktop/programing/vanilla-redux/public/index.html
@@ -16,11 +16,15 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-   <h1>To Dos</h1>
+    <!-- vanilla JS -->
+   <!-- <h1>To Dos</h1>
    <form>
       <input type="text" placeholder="Write to do" />
       <button>Add</button>
    </form>
-   <ul></ul>
+   <ul></ul> -->
+
+   <!-- React -->
+   <div id="root"></div>
   </body>
 </html>
